Fixed area of ​​visibility in EditItemForm

--- a/src/components/Common/Modal/Modal.less
+++ b/src/components/Common/Modal/Modal.less
@@ -37,6 +37,7 @@
     }
 
     & h1 {
+        padding: 0 0 20px 0;
         font-size: 16pt;
     }
 
