--- a/src/components/EdiItemForm/EditItemForm.less
+++ b/src/components/EdiItemForm/EditItemForm.less
@@ -1,50 +1,23 @@
-input {
-    padding: 10px 5px;
-    border: 1px solid #ebebeb;
-    box-sizing: border-box;
-    outline: #5f5f5f;
-    background-color: #e9e9e9;
-    font-size: 16pt;
-}
+.editItemForm {
+    & select {
+        padding: 10px 0;
+        border: 1px solid #ebebeb;
+        box-sizing: border-box;
+        background-color: #e9e9e9;
+        font-size: 16pt;
+    }
 
-select {
-    padding: 10px 0;
-    border: 1px solid #ebebeb;
-    box-sizing: border-box;
-    background-color: #e9e9e9;
-    font-size: 16pt;
-}
+    & label {
+        color: #000000;
+        font-size: 12pt;
+    }
 
-h1 {
-    padding: 20px 0;
-    font-size: 18pt;
-}
-
-.editItemForm label {
-    color: #000000;
-    font-size: 12pt;
-}
-
-.backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-
-.background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-}
-
-.error {
-    border: 1px solid red;
+    & input {
+        padding: 10px 5px;
+        border: 1px solid #ebebeb;
+        box-sizing: border-box;
+        outline: #5f5f5f;
+        background-color: #e9e9e9;
+        font-size: 16pt;
+    }
 }
